[gd_scene load_steps=13 format=2]

[ext_resource path="res://Hitbox.tscn" type="PackedScene" id=1]
[ext_resource path="res://Tilemap/characters_packed.png" type="Texture" id=2]
[ext_resource path="res://BigWalkingEnemy.gd" type="Script" id=3]
[ext_resource path="res://Assets/CrackedHelmetBigGuy.png" type="Texture" id=4]

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 4 )
region = Rect2( 72, 48, 24, 24 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 4 )
region = Rect2( 96, 48, 24, 24 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 72, 48, 24, 24 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 96, 48, 24, 24 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "CrackedWalking",
"speed": 5.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "Walking",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 10, 8 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 11, 8.5 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 12, 9.5 )

[node name="BigWalkingEnemy" type="KinematicBody2D"]
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -12 )
frames = SubResource( 3 )
animation = "CrackedWalking"
frame = 1
playing = true

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -11 )
shape = SubResource( 4 )

[node name="LedgeCheckRight" type="RayCast2D" parent="."]
position = Vector2( 10, -3 )
enabled = true
cast_to = Vector2( 0, 3 )

[node name="LedgeCheckLeft" type="RayCast2D" parent="."]
position = Vector2( -10, -3 )
enabled = true
cast_to = Vector2( 0, 3 )

[node name="Hitbox" parent="." instance=ExtResource( 1 )]

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 0, -11.5 )
shape = SubResource( 5 )

[node name="BulletCheck" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BulletCheck"]
position = Vector2( 0, -12.5 )
shape = SubResource( 6 )

[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="area_entered" from="BulletCheck" to="." method="_on_BulletCheck_area_entered"]

[editable path="Hitbox"]
